--- a/main/index.css
+++ b/main/index.css
@@ -66,6 +66,13 @@ a{
     background-color: #111;
 }
 
+/*Title*/
+@media only screen and (max-width: 766px){
+  .big{
+    display: none;
+  }
+}
+
 /*carousel responsive*/
 .slide1{
   background-image: url('assets/img/carousel1.jpg');
